<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/img_bg2" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_back"
        android:onClick="imagebuttonBackClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewH1Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/foody_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textViewH2Register"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/textViewH1Register" />

    <LinearLayout
        android:id="@+id/linerLayoutRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewH2Register"
        app:layout_constraintWidth_percent="0.9">

        <EditText
            android:id="@+id/edt_name"
            style="@style/editTextRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account"
            android:hint="@string/full_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edt_email"
            style="@style/editTextRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_password"
                style="@style/editTextRegister"
                android:layout_width="match_parent"
                android:paddingRight="15dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:drawableLeft="@drawable/ic_key"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/ib_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_show_pass"
                android:onClick="imagebuttonShowPassClick" />

            <ImageButton
                android:visibility="invisible"
                android:id="@+id/ib_hide_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_hide_pass"
                android:onClick="imagebuttonHidePassClick" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/editTextRegister"
                android:layout_width="match_parent"
                android:paddingRight="15dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:drawableLeft="@drawable/ic_key"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/ib_show_confirm_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_show_pass"
                android:onClick="imagebuttonShowConfirmPassClick" />

            <ImageButton
                android:visibility="invisible"
                android:id="@+id/ib_hide_confirm_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_hide_pass"
                android:onClick="imagebuttonHideConfirmPassClick" />
        </FrameLayout>

    </LinearLayout>

    <Button
        android:onClick="buttonRegisterClick"
        android:id="@+id/buttonRegister_register"
        style="@style/buttonRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linerLayoutRegister" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister_register">

        <TextView
            style="@style/colorAndPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="textviewSignInClick"
            android:text="@string/sign_in"
            android:textColor="@color/red_53"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>