<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/img_bg2" />

    <ImageButton
        android:layout_marginTop="10dp"
        android:onClick="imagebuttonBackClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_back" />


    <TextView
        android:id="@+id/textViewH1Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/foody_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textViewH2Register"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/textViewH1Register" />

    <LinearLayout
        android:id="@+id/linerLayoutRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewH2Register"
        app:layout_constraintWidth_percent="0.9">


        <EditText
            style="@style/editTextRegister"
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_password"
                style="@style/editTextRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:drawableLeft="@drawable/ic_key"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/ib_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_show_pass"
                android:onClick="imagebuttonShowPassClick" />

            <ImageButton
                android:visibility="invisible"
                android:id="@+id/ib_hide_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_hide_pass"
                android:onClick="imagebuttonHidePassClick" />
        </FrameLayout>
        
        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="Remember to login"
            android:textColor="@color/red_53"
            android:layout_marginLeft="200dp"
            android:textStyle="bold"
            android:gravity="center_vertical" />
    </LinearLayout>

    

    <Button
        android:onClick="buttonSignInClick"
        android:id="@+id/btn_sign_in"
        style="@style/buttonRegister"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linerLayoutRegister"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            style="@style/colorAndPosition"/>

        <TextView
            android:onClick="textviewRegisterClick"
            android:layout_marginLeft="5dp"
            android:textColor="@color/red_53"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>